# ForgeCore_OS

./: .gitignore  ADVANCED_CRYPTOGRAPHY_REPORT.md  CHATGPT_PROOF_FILE.md  ENHANCEMENT_REPORT.md  INSTALL_AGENT_PACK.bat  START_EMPIRE.bat  electron_main.js  package-lock.json  package.json
CI_PIPELINE/: github_actions.yml
core/: EMPIRE_HUD.html  PRODUCT.json  SOVEREIGN_SERVER.js  THEME_ENGINE.css  ai_threat_detector.js  behavioral_analytics.js  config.json  decentralized_identity.js  dna_seal_generator.js  enhanced_sovereign_server.js  kernel_resurrection.js  lazarus.js  quantum_resistant_crypto_secure.js  secure_mpc.js  security_audit.js  security_dna.js  security_guards.js  telemetry_ledger.js  vault_crypt.js
docs/: ARCHITECTURE.md  INSTITUTIONAL_BUILD_SYSTEM_README.md  NEURAL_EMPIRE_PACKS.md  RELEASE_PROTOCOL.md  REPO_INJECTION_PACK_README.md  SHIP_OPERATIONS.md  TEST_STRATEGY.md
rust_quantum_crypto/: Cargo.toml
rust_quantum_crypto/src/: ai_threat_detector.rs  lib.rs  main.rs  quantum_optimized.rs  zero_knowledge_proofs.rs
scripts/: GhostMachine_Build.js  REPRODUCIBLE_BUILD.sh  TITAN_AUDIT.js  VERIFY_RELEASE.ps1  check_release_feed_alignment.cjs  check_signature_portable.cjs  check_trust_root.cjs  deploy_publish_local.cjs  feed_trust_utils.cjs  founder_ops_pipeline.cjs  generate_minepack_specs.cjs  generate_signing_keypair.cjs  generate_update_metadata_portable.cjs  ghost_witness_peer.cjs  install_portable_from_feed.cjs  materialize_mind_unset_outputs.cjs  materialize_obey_outputs.cjs  prepare_ship_bundle.cjs  prove_ghost_witness.cjs  publish_cosign_portable.cjs  publish_portable_bundle.cjs  refresh_manifest_signature.cjs  release_harden_stable.cjs  release_portable.cjs  (+9 more)
(+115 files in other folders)
